gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kserve-ingress-gateway
  namespace: kserve
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      serving.kserve.io/gateway: kserve-ingress-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.llm.bearingpoint.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-llm-bearingpoint-com-tls
      allowedRoutes:
        namespaces:
          from: All
